Fri Feb 22 22:44:24 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:
	  Added BuiltinTopicKeyLess functor to simplify using
	  BuiltinTopicKey_t values as map keys.

Wed Feb 20 22:47:54 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Qos_Helper.inl:
          PARTITION QoS is now valid.

Tue Feb 19 17:17:31 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * docs/design/partition.txt:
          Added some explicit information about fnmatch().

Tue Feb 19 16:05:47 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * docs/design/partition.txt:
          Added documentation about the PARTITION Qos policy
          implementation.

Mon Feb 18 16:28:55 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
        Merging trunk changes 965:974 out to branch.
        Mon Feb 18 16:28:55 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

          * dds/DCPS/ZeroCopyAllocator_T.cpp:
            Eliminated a warning from gcc in asserts.

        Mon Feb 18 14:41:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

          * dds/DCPS/Util.h:
            Added a typedef to compile the code with BCB and GCC.

        Mon Feb 18 14:29:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

          * dds/DCPS/Util.h:
            Removed not needed typename which is causing problems with BCB.
            Thanks to Adam Mitz for noticing this typename

        Mon Feb 18 14:13:52 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

          * dds/DCPS/transport/ReliableMulticast/detail/NackGenerator.h:
            Added missing include of iterator that is needed to get
            std::back_inserter

        Tue Feb 12 19:10:52 UTC 2008  Brian Johnson  <johnsonb@stladvantage.com>

          * docs/design/UML/DDS.xmi:

            XMI version 1.1 file of the model DDS.uml.

          * docs/design/UML/readme.txt:

            Added note about this new file.
